Project 1 Part A report text additions

--- a/notebooks/proj1_a.ipynb
+++ b/notebooks/proj1_a.ipynb
@@ -1,6 +1,324 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project 1 – Taylor Series and Floating Point Error\n",
+    "## MATH 3316 High Performance Scientific Computing, Fall 2016\n",
+    "\n",
+    "Author: Paul Herz\n",
+    "\n",
+    "The designated programming language for this project was C++, built in Xcode and compiled with Clang (Apple LLVM 8.0.0) using the C++14 dialect.\n",
+    "\n",
+    "### Structure of this Project\n",
+    "\n",
+    "This project's file structure follows the GNU-style C++ project standard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[36mHPSCProject1.xcodeproj\u001b[m\u001b[m/ \u001b[1m\u001b[36mdata\u001b[m\u001b[m/                   \u001b[1m\u001b[36mreports\u001b[m\u001b[m/\r\n",
+      "Makefile                \u001b[1m\u001b[36mlib\u001b[m\u001b[m/                    \u001b[1m\u001b[36msrc\u001b[m\u001b[m/\r\n",
+      "\u001b[1m\u001b[36mbin\u001b[m\u001b[m/                    \u001b[1m\u001b[36mnotebooks\u001b[m\u001b[m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excluding the `.xcodeproj` file, which was used for integration with the Xcode IDE, debugging, and profiling purposes, each item in the project directory serves the following purpose:\n",
+    "\n",
+    "- `Makefile`: GNU Make project build automation definitions\n",
+    "- `bin/`: compiled binaries. Make will put binaries here by default.\n",
+    "- `data/`: where calculated data is stored after program execution. Files are `.txt` files containing real numbers, space delimited to denote row items, and newline delimited to denote new rows.\n",
+    "- `lib/`: reused libraries that are not part of this project specifically. Contains my rewrite of the Matrix library ([phrz/matrix](https://github.com/phrz/matrix)).\n",
+    "- `notebooks/`: Python 3 Jupyter notebooks, notably the one used to generate this report.\n",
+    "- `reports/`: PDFs generated from the Jupyter notebooks via `nbconvert` and `pdflatex`.\n",
+    "- `src/`: contains the main mathematical routines described in this report, which are used to generate the raw data in `data/`.\n",
+    "\n",
+    "### Using this Project\n",
+    "\n",
+    "#### Prerequisites\n",
+    "- A Unix or Unix-like OS (e.g. macOS or Linux)\n",
+    "- A compiler with support for C++14 (LLVM or GNU toolchain)\n",
+    "- Python ≥3.5\n",
+    "- The latest Jupyter distribution\n",
+    "- LaTeX with `pdflatex`\n",
+    "- GNU Make ≥3.81\n",
+    "\n",
+    "#### Building this project\n",
+    "This project provides several GNU Make targets, with a handful of them being especially useful.\n",
+    "\n",
+    "`make all` (default) - will compile binaries, execute them to generate data files, execute Jupyter notebooks under fresh kernels with just-generated data files, and convert them to PDFs in `/reports`.\n",
+    "\n",
+    "`make all_bin` - will compile binaries for part A and B of this project.\n",
+    "\n",
+    "`make all_data` - will compile binaries and execute them to generate data files.\n",
+    "\n",
+    "`make clean` - will delete all compiled binaries, generated data, executed notebook copies (but not the original notebooks), and **report PDFs**.\n",
+    "\n",
+    "Below, find attached the full Makefile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#\r\n",
+      "#  Makefile\r\n",
+      "#  HPSCProject1\r\n",
+      "#\r\n",
+      "#  Created by Paul Herz on 9/3/16.\r\n",
+      "#  Copyright © 2016 Paul Herz. All rights reserved.\r\n",
+      "#\r\n",
+      "\r\n",
+      "TARGETA = HPSCProject1_a\r\n",
+      "TARGETB = HPSCProject1_b\r\n",
+      "\r\n",
+      "CXX = g++\r\n",
+      "CFLAGS = -std=c++14\r\n",
+      "\r\n",
+      "SRC = src/\r\n",
+      "LIB = lib/\r\n",
+      "BIN = bin/\r\n",
+      "ROOT = $(shell pwd)/\r\n",
+      "DATA = data/\r\n",
+      "NB = notebooks/\r\n",
+      "RP = reports/\r\n",
+      "\r\n",
+      "AFILES = proj1_a.cpp\r\n",
+      "BFILES = proj1_b.cpp\r\n",
+      "LIBFILES = Matrix.cpp Vector.cpp\r\n",
+      "\r\n",
+      "NOTEBOOK_A = $(NB)proj1_a.ipynb\r\n",
+      "NOTEBOOK_B = $(NB)proj1_b.ipynb\r\n",
+      "\r\n",
+      "REPORT_A = $(RP)proj1_a.pdf\r\n",
+      "REPORT_B = $(RP)proj1_b.pdf\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "################################\r\n",
+      "# All target                   #\r\n",
+      "################################\r\n",
+      "\r\n",
+      "all: all_bin all_data all_reports\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "################################\r\n",
+      "# Application binaries         #\r\n",
+      "################################\r\n",
+      "\r\n",
+      "all_bin: $(TARGETA) $(TARGETB)\r\n",
+      "\r\n",
+      "$(TARGETA):\r\n",
+      "\t$(CXX) $(CFLAGS) -o $(BIN)$(TARGETA) -I $(LIB) $(addprefix $(LIB), $(LIBFILES)) $(addprefix $(SRC), $(AFILES))\r\n",
+      "\r\n",
+      "$(TARGETB):\r\n",
+      "\t$(CXX) $(CFLAGS) -o $(BIN)$(TARGETB) -I $(LIB) $(addprefix $(LIB), $(LIBFILES)) $(addprefix $(SRC), $(BFILES))\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "################################\r\n",
+      "# Data files                   #\r\n",
+      "################################\r\n",
+      "\r\n",
+      "all_data: data_a data_b\r\n",
+      "\r\n",
+      "data_a: $(TARGETA)\r\n",
+      "\tcd $(BIN); ./$(TARGETA)\r\n",
+      "\r\n",
+      "data_b: $(TARGETB)\r\n",
+      "\tcd $(BIN); ./$(TARGETB)\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "################################\r\n",
+      "# Reports                      #\r\n",
+      "################################\r\n",
+      "\r\n",
+      "all_reports: $(REPORT_A) $(REPORT_B)\r\n",
+      "\r\n",
+      "$(REPORT_A): data_a $(NOTEBOOK_A)\r\n",
+      "\tjupyter nbconvert --to pdf --execute $(NOTEBOOK_A) --output-dir $(ROOT)$(RP)\r\n",
+      "\r\n",
+      "$(REPORT_B): data_b $(NOTEBOOK_B)\r\n",
+      "\tjupyter nbconvert --to pdf --execute $(NOTEBOOK_B) --output-dir $(ROOT)$(RP)\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "################################\r\n",
+      "# Miscellaneous                #\r\n",
+      "################################\r\n",
+      "\r\n",
+      "clean:\r\n",
+      "\trm -f ./$(DATA)a/*\r\n",
+      "\trm -f ./$(DATA)b/*\r\n",
+      "\trm -f ./$(BIN)$(TARGETA)\r\n",
+      "\trm -f ./$(BIN)$(TARGETB)\r\n",
+      "\trm -f ./$(RP)*.pdf\r\n",
+      "\trm -f ./$(NB)*.nbconvert.ipynb\r\n",
+      "\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat ../Makefile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part A – Approximation of a Function by Taylor Polynomials\n",
+    "\n",
+    "Part A of this project concerned itself with programmatically constructing and then evaluating Taylor polynomials of varying length for a given function, $f(x) = e^x$.\n",
+    "\n",
+    "### Goals\n",
+    "\n",
+    "Specifically, I was to generate a Taylor polynomial $p_n(x)$ to approximate $f(x)$, where $n$ was the polynomial's degree. I had to generate three distinct Taylor polynomials $p_n(x)$ for $n=\\{4,8,12\\}$. I was then supposed to evaluate all three Taylor polynomials, as well as the true function $f(x)$, over the range $[-1.0, 1.0]$ for the variable $x$. Lastly, with these datapoints for four functions over the given range, I had to calculate the absolute error of each Taylor polynomial in approximating the true function $f(x)$ over the given range for $x$.\n",
+    "\n",
+    "### Math Background\n",
+    "\n",
+    "#### Taylor series\n",
+    "\n",
+    "The Taylor series for $f(x)=e^x$ is defined as follows:\n",
+    "\n",
+    "$$\n",
+    "e^x = \\sum_{n=0}^{\\infty} \\frac{x^n}{n!}\n",
+    "$$\n",
+    "\n",
+    "which expands to:\n",
+    "\n",
+    "$$\n",
+    "e^x = 1 + x + \\frac{x^2}{2!} + \\frac{x^3}{3!} + \\cdots\n",
+    "$$\n",
+    "\n",
+    "In this program's calculations, I approximate this full Taylor series, and thus approximate $f(x)$, by using *Taylor polynomials*, effectively truncated Taylor series. Unlike Taylor series, which are infinite, Taylor polynomials can be calculated in finite time. What's more, as the data will demonstrate, these approximations, depending on parameters like polynomial degree, can create acceptably accurate numerical results for our purposes.\n",
+    "\n",
+    "#### Absolute error\n",
+    "\n",
+    "Absolute error is defined for any true value $x$ and any approximation of that true value (approximate value) $\\hat{x}$ as the absolute value of the difference between the two:\n",
+    "\n",
+    "$$\n",
+    "\\epsilon = |x - \\hat{x}|\n",
+    "$$\n",
+    "\n",
+    "In this project, I will calculate the absolute error of an approximate *function* $\\hat{f}(x)$ in approximating a *true function* $f(x)$. Thus the absolute error is not a value, but itself a function in terms of $x$:\n",
+    "\n",
+    "$$\n",
+    "\\epsilon(x) = |f(x) - \\hat{f}(x)|\n",
+    "$$\n",
+    "\n",
+    "### Implementation Requirements\n",
+    "\n",
+    "#### The Nested Multiplication Function\n",
+    "\n",
+    "First, as an exercise in both learning and performative efficiency, I was to implemented a generic form of Horner's method for polynomial evaluation. The function `nest`, located in `nest.cpp` and sampled below, evaluated a polynomial of the form $p = a_0 +a_1 x+a_2 x^2+\\ldots+a_n x^n$. Coefficients $\\{a_0,\\ldots,a_n\\}$ are passed to the function as a row matrix `a` of size $n+1$. The second parameter is a real number `x`, the present value of the variable $x$ for this iteration of evaluation.\n",
+    "\n",
+    "#### Calculation Routine\n",
+    "\n",
+    "Specific requirements were provided in how to approach the end goals outlined above. The row vector `z` was to be a linearly-spaced collection of values in the range $[-1.0,1.0]$, with an incremental step of $+0.01$. This row vector would be iterated upon in order to provide incremental values of $x$ in evaluating $f(x)$ and the Taylor polynomials $p_{4}(x), p_{8}(x), p_{12}(x)$. These functions' results for $x_i \\in z$ would be stored in `f`, `p4`, `p8`, and `p12` respectively. The absolute errors over $z$ of $p_n(x)$ in approximating $f(x)$ would be stored in `err4`, `err8`, and `err12` respectively.\n",
+    "\n",
+    "### Implementation\n",
+    "\n",
+    "#### The Nested Multiplication Function\n",
+    "\n",
+    "The `nest` function, implementing Horner's method, actually evaluates the polynomial from the inside (deepest level) out as $p=a_0+x(a_1+x(\\ldots a_{n_1}+x(a_n)\\ldots))$, significantly reducing the number of calculations required to evaluate any $n$-length polynomial and eliminating the need to accumulate $x^i$ for each polynomial term in a separate variable.\n",
+    "\n",
+    "As an added optimization, `nest` employs the C++ Standard Library's fused multiply-add method ([std::fma](http://en.cppreference.com/w/cpp/numeric/math/fma)), which on compatible processors maps to a single [CPU operation](https://en.wikipedia.org/wiki/Multiply–accumulate_operation). This reduces the computer arithmetic operations required in Horner's method ($2n$) to an impressive $n$ operations for an $n^{th}$-degree polynomial on most modern CPUs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "//\r\n",
+      "//  nest.cpp\r\n",
+      "//  HPSCProject1\r\n",
+      "//\r\n",
+      "//  Created by Paul Herz on 8/31/16.\r\n",
+      "//  Copyright © 2016 Paul Herz. All rights reserved.\r\n",
+      "//\r\n",
+      "\r\n",
+      "#include <iostream>\r\n",
+      "\r\n",
+      "#include \"Matrix.h\"\r\n",
+      "#include \"Vector.h\"\r\n",
+      "\r\n",
+      "#ifndef nest_cpp\r\n",
+      "#define nest_cpp\r\n",
+      "\r\n",
+      "using namespace PH;\r\n",
+      "\r\n",
+      "double nest(Matrix& a, double x) {\r\n",
+      "\t// evaluate the following with nested multiplication:\r\n",
+      "\t//\r\n",
+      "\t// p = a_0 + a_1 x + a_2 x^2 + ... + a_{n-1} x^{n-1} + a_n x^n.\r\n",
+      "\t//\r\n",
+      "\t// the [n+1] coefficients a[0]...a[n] are in Vector a.\r\n",
+      "\t// nest(a,x) should return p.\r\n",
+      "\t\r\n",
+      "\t// nested form: p = a_0 + x( a_1 + x( ... a_n-1 + x(a_n) ... ) )\r\n",
+      "\t\r\n",
+      "\t// begin total as = a_n\r\n",
+      "\tdouble n = a.size() - 1;\r\n",
+      "\tdouble total = a(n);\r\n",
+      "\t\r\n",
+      "\t// this weird looking for loop\r\n",
+      "\t// avoids size_t to zero comparison warnings,\r\n",
+      "\t// and just allows the Index to wrap around where\r\n",
+      "\t// it's greater than n.\r\n",
+      "\t\r\n",
+      "\tfor(Index i = n - 1; i < n; --i) {\r\n",
+      "\t\t// fma(x,y,z) = x * y + z\r\n",
+      "\t\t// total * x + a_i\r\n",
+      "\t\ttotal = std::fma(total, x, a(i));\r\n",
+      "\t}\r\n",
+      "\t\r\n",
+      "\treturn total;\r\n",
+      "}\r\n",
+      "\r\n",
+      "#endif\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat ../src/nest.cpp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
