Added write up to project notebooks

--- a/notebooks/proj1_b.ipynb
+++ b/notebooks/proj1_b.ipynb
@@ -1,6 +1,209 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** this is a continuation of Part A of this project's documentation, which should be included alongside this document. Please refer to that document for project boilerplate, execution instructions and requirements, and other projectwide information.\n",
+    "\n",
+    "## Part B – Errors in a Forward Finite Difference Approximation\n",
+    "\n",
+    "Part B of this project concerns itself with forward difference estimates, used to approximate the derivative for a function at a point, given the function's zeroth derivative (base function) and an \"offset,\" which is effectively used as a $\\Delta x$ value, such that as it becomes smaller, it approaches $dx$, and the value of $\\delta^+ f(x)$ approaches $f'(x)$.\n",
+    "\n",
+    "### Goals\n",
+    "\n",
+    "In this instance, we are given the function $f(x)=x^{-3}$ where $x=3$, and we are to approximate $f'(3)$ without being able to directly use the derivative function. The increment $h=2^{-n}$ and we iterate $n=1\\ldots 52$ such that $n$ shrinks, thus allowing $\\delta^+ f(3)$ to approximate $f'(3)$.\n",
+    "\n",
+    "### Math Background\n",
+    "\n",
+    "#### Forward Finite Difference Estimate\n",
+    "\n",
+    "The forward finite difference estimate as a means of approximating a derivative is defined as follows:\n",
+    "\n",
+    "$$\n",
+    "    \\delta^+ f(a) = \\frac{f(a+h) - f(a)}{h}\n",
+    "$$\n",
+    "\n",
+    "Where $a$ is the derivative value to calculate, and $h$ is the increment (the smaller, the better).\n",
+    "\n",
+    "### Implementation Requirements\n",
+    "\n",
+    "The requirements for this program, once parsed from the source documentation, are extremely straightforward:\n",
+    "\n",
+    "#### Input Functions\n",
+    "\n",
+    "The function $f(x)$, as well as $f'(x)$ and $f''(x)$, ought to be implemented somewhere in the codebase for FDE and error calculation.\n",
+    "\n",
+    "$$ f(x) = x^{-3},\\ f'(x) = -3x^{-4},\\ f''(x) = 12x^{-5} $$\n",
+    "\n",
+    "#### Forward Difference Estimate\n",
+    "\n",
+    "The FDE's arithmetic should be implemented within the codebase to replicate the math as described above.\n",
+    "\n",
+    "#### Error Calculation\n",
+    "\n",
+    "The relative error function should be implemented as described:\n",
+    "$$\n",
+    "r = \\left| \\frac{f'(a)-\\delta_{DP}^+ f(a)}{f'(a)} \\right|\n",
+    "$$\n",
+    "\n",
+    "The upper bound of relative error in the FDE approximating $f'(a)$ was given as follows:\n",
+    "\n",
+    "$$\n",
+    "R = c_1 h + c_2\\frac{1}{h},\\ c_1=\\left|\\frac{f''(a)}{2f'(a)}\\right|,\\\n",
+    "c_2=\\left|\\frac{f(a) \\epsilon_{DP}}{f'(a)}\\right|\n",
+    "$$\n",
+    "\n",
+    "### Implementation\n",
+    "\n",
+    "#### Input Functions\n",
+    "\n",
+    "These are implemented as `f`, `f1`, and `f2` in the C++ source.\n",
+    "\n",
+    "#### Forward Difference Estimate\n",
+    "\n",
+    "FDE is implemented as an extremely simple arithmetic function within the project part B file. Refer to `forwardDifferenceEstimate` in the C++ source below.\n",
+    "\n",
+    "#### Error Calculation\n",
+    "\n",
+    "Relative error calculation is implemented as a simple arithmetic function in `relativeError` in the source.\n",
+    "\n",
+    "The upper bound function is similarly available at `relativeErrorUpperBound`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "//\r\n",
+      "//  proj1_b.cpp\r\n",
+      "//  HPSCProject1\r\n",
+      "//\r\n",
+      "//  Created by Paul Herz on 9/3/16.\r\n",
+      "//  Copyright © 2016 Paul Herz. All rights reserved.\r\n",
+      "//\r\n",
+      "\r\n",
+      "#include <iostream>\r\n",
+      "#include <cmath>\r\n",
+      "\r\n",
+      "#include \"Vector.h\"\r\n",
+      "\r\n",
+      "using namespace PH;\r\n",
+      "\r\n",
+      "\r\n",
+      "// System double-precision epsilon.\r\n",
+      "// determined to be 2^-52 during testing.\r\n",
+      "double EDP = __DBL_EPSILON__;\r\n",
+      "\r\n",
+      "\r\n",
+      "double f(double x) {\r\n",
+      "\treturn std::pow(x, -3.0);\r\n",
+      "}\r\n",
+      "\r\n",
+      "\r\n",
+      "double f1(double x) {\r\n",
+      "\t// first derivative of f(x)\r\n",
+      "\treturn -3.0 * std::pow(x, -4.0);\r\n",
+      "}\r\n",
+      "\r\n",
+      "\r\n",
+      "double f2(double x) {\r\n",
+      "\t// second derivative of f(x)\r\n",
+      "\treturn 12 * std::pow(x, -5.0);\r\n",
+      "}\r\n",
+      "\r\n",
+      "\r\n",
+      "double forwardDifferenceEstimate(double a, double h) {\r\n",
+      "\t// for a sufficiently smooth function f(x), the F.D.E. of f'(a) is def.\r\n",
+      "\t// δ⁺f(a) = [f(a+h)-f(a)] / h\r\n",
+      "\t\r\n",
+      "\treturn (f(a+h) - f(a)) / h;\r\n",
+      "}\r\n",
+      "\r\n",
+      "\r\n",
+      "double relativeError(double a, double h) {\r\n",
+      "\t// relative DP approximation error δ⁺DP f ~ f'(a)\r\n",
+      "\t// r = |[f'(a)-δ⁺f(a)]/f'(a)|\r\n",
+      "\tauto f1a = f1(a);\r\n",
+      "\tauto fde = forwardDifferenceEstimate(a, h);\r\n",
+      "\t\r\n",
+      "\treturn std::abs((f1a-fde)/f1a);\r\n",
+      "}\r\n",
+      "\r\n",
+      "\r\n",
+      "double relativeErrorUpperBound(double a, double h) {\r\n",
+      "\t// the upper bound on the relative error r is\r\n",
+      "\t// R = c_1 * h + c_2 * (1/h)\r\n",
+      "\t//\r\n",
+      "\t// where c_1 = |[f\"(a)]/[2*f'(a)]|,\r\n",
+      "\t//   and c_2 = |[f(a)*ϵ_DP]/[f'(a)]|\r\n",
+      "\t\r\n",
+      "\tauto fa = f(a);\r\n",
+      "\tauto f1a = f1(a);\r\n",
+      "\tauto f2a = f2(a);\r\n",
+      "\t\r\n",
+      "\tauto c_1 = std::abs((f2a)/(2*f1a));\r\n",
+      "\tauto c_2 = std::abs((fa*EDP)/(f1a));\r\n",
+      "\t\r\n",
+      "\treturn c_1 * h + c_2 * (1.0/h);\r\n",
+      "}\r\n",
+      "\r\n",
+      "\r\n",
+      "int main(int argc, const char * argv[]) {\r\n",
+      "\t\r\n",
+      "\t// for each of these increment values, compute:\r\n",
+      "\t// • the relative error r in your approximation\r\n",
+      "\t// • the upper bound on the relative error, R,\r\n",
+      "\t//   from the derivation in (7)\r\n",
+      "\t\r\n",
+      "\t\r\n",
+      "\t// GOAL: compute the forward difference estimates δ⁺f(3) (see 1) of\r\n",
+      "\t// f'(3), with the sequence of increments h.\r\n",
+      "\t//\r\n",
+      "\t// f(x) = x⁻³\r\n",
+      "\t// h = 2⁻ⁿ (n = 1, 2, 3, …, 52)\r\n",
+      "\t\r\n",
+      "\tauto n = Vector::linSpace(1, 52, 52);\r\n",
+      "\tVector h = 2 ^ -n;\r\n",
+      "\t\r\n",
+      "\tauto a = 3.0;\r\n",
+      "\tVector estimates(52), r(52), R(52);\r\n",
+      "\t\r\n",
+      "\t// for each increment value `h_i`...\r\n",
+      "\tfor(Index i = 0; i < h.size(); ++i) {\r\n",
+      "\t\t// ...calculate relative error `r` in your approximation....\r\n",
+      "\t\tr[i] = relativeError(a, h[i]);\r\n",
+      "\t\t\r\n",
+      "\t\t// ...and the upper bound on `r`: `R`.\r\n",
+      "\t\tR[i] = relativeErrorUpperBound(a, h[i]);\r\n",
+      "\t\t\r\n",
+      "\t}\r\n",
+      "\t\r\n",
+      "\t// save n, h, r, and R as\r\n",
+      "\t// n.txt, h.txt, r.txt, and R.txt.\r\n",
+      "\tstd::string prefix = \"../data/b/\";\r\n",
+      "\tn.saveTo(prefix + \"n.txt\");\r\n",
+      "\th.saveTo(prefix + \"h.txt\");\r\n",
+      "\tr.saveTo(prefix + \"r.txt\");\r\n",
+      "\tR.saveTo(prefix + \"bigr.txt\");\r\n",
+      "\t\r\n",
+      "\treturn 0;\r\n",
+      "}\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat ../src/proj1_b.cpp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -139,6 +342,21 @@
     "pylab.xlabel('$n$')\n",
     "pylab.ylabel('error')\n",
     "pylab.title('Relative error of $\\delta^+_{DP}f(a)$ in approximating $f\\'(a)$ (log-log)', y=1.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Analysis\n",
+    "\n",
+    "As the integer $n$ increments, and $h$ as such decreases, the accuracy of the FDE improves until $n$ reaches about the 3/4 point of the interval, and $h$ is still decreasing but not at its smallest value yet. At sufficiently small values of $h$, there may be a loss-of-significance error at any number of steps including: (1) the evaluation of $h$ itself, (2) the evaluation of $a+h$ relative to $a$, or *especially* (3) division by $h$, which causes to grow exponentially which may outpace the numerator of the FDE function when loss-of-significance occurs.\n",
+    "\n",
+    "### Conclusion\n",
+    "\n",
+    "The arithmetic for this section was markedly simple once past understanding the theory of FDEs and the relatively advanced error calculation when considering double point error, etc."
    ]
   },
   {
